for presentaion 30%